[tool.poetry]
name = "oldgdms_pfile_downloader"
version = "0.0.1"
description = "Old GDMS Website Picking File Downloadler"
authors = ["Sean Ho <sean.li.shin.ho@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
zenipy = "*"
requests = "*"
urllib3 = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
