[tool.poetry]
name = "gdmspy"
version = "0.1.0"
description = "Old GDMS Website Picking File Downloadler"
authors = ["Sean Ho <sean.li.shin.ho@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
zenipy = "*"
requests = "*"
urllib3 = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
