[tool.poetry]
name = "gdmspy"
version = "0.1.0"
description = "Old GDMS Website Picking File Downloadler"
authors = ["Sean Ho <sean.li.shin.ho@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
zenipy = "*"
requests = "*"
urllib3 = "*"
PyGObject = "*"
pycurl-requests = "^0.2.1"
Send2Trash = "^1.8.0"
python-magic = "^0.4.25"

[tool.poetry.group.dev.dependencies]
ipython = "^8.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
